--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.2.5
 autopep8==1.4.4
 Click==7.0
 Flask==1.1.1
+Flask-Cors==3.0.8
 Flask-RESTful==0.3.7
 isort==4.3.21
 itsdangerous==1.1.0
@@ -10,10 +11,14 @@ Jinja2==2.10.1
 lazy-object-proxy==1.4.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
+numpy==1.16.4
+pandas==0.24.2
 pycodestyle==2.5.0
 pylint==2.3.1
+python-dateutil==2.8.0
 pytz==2019.1
 six==1.12.0
 typed-ast==1.4.0
+uuid==1.30
 Werkzeug==0.15.4
 wrapt==1.11.2
